--- a/GestureCollector/package.json
+++ b/GestureCollector/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "pdfjs-dist": "4.8.69",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdf": "^9.2.1",
+    "react-router-dom": "^7.6.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
